update for mentor review

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
+    <title>Back to the Boat!</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
+
+
+
 </head>
 <body>
-    <script src="js/resources.js"></script>
+	<h1>Back to the boat!</h1>
+<div id="boat"><img src="images/boat.png"></div>    
+	<!--scripts -->
+	<script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
 </body>
