--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	        		<div class="modal-content">
 
 	        			<div class="modal-header">
-	        				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        				<button type="button" class="replayBtn close" data-dismiss="modal" aria-label="Close">
 	                  			<span aria-hidden="true">&times;</span>
 	                		</button>
 	                		<h2>How did you fare, seafarer?</h2>
@@ -74,7 +74,7 @@
 	               		</div><!--end modal body-->
 
 	               		<div class="modal-footer" style="text-align: center">
-	               			<button id="replayBtn">play again?</button>
+	               			<button class="replayBtn">play again?</button>
 	               		</div><!--end modal footer-->
 
 					</div><!--end modal content-->
